# gstreamer1.0-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
examples/: appsink.rs  appsink_no_sync.rs  appsink_poll.rs  appsrc.rs  decodebin.rs  gst-launch.rs  playbin.rs  v4l2.rs
src/: appsink.rs  appsink_poll.rs  appsrc.rs  bin.rs  buffer.rs  buffer_pool.rs  bus.rs  caps.rs  clock.rs  duplicate.rs  element.rs  error.rs  ffi.rs  iterator.rs  lib.rs  link.rs  link_osx.rs  link_windows.rs  mainloop.rs  mapinfo.rs  message.rs  miniobject.rs  object.rs  pad.rs  pipeline.rs  playbin.rs  reference.rs  sample.rs  structure.rs  util.rs  videoframe.rs  videoinfo.rs
