[package]
name    = "gstreamer"
description = "Idiomatic bindings for GStreamer"
homepage = "https://github.com/arturoc/gstreamer1.0-rs"
repository = "https://github.com/arturoc/gstreamer1.0-rs"
documentation = "http://rin.rs/docs/gst/"
readme = "README.md"
license = "MIT"
version = "0.7.2"
authors = [ "Arturo Castro <mail@arturocastro.net>" ]
links = "gstreamer"
build = "build.rs"

[lib]
name = "gst"
path = "src/lib.rs"

[dependencies]
glib-sys = { git = "https://github.com/gtk-rs/sys.git" }
gobject-sys = { git = "https://github.com/gtk-rs/sys.git" }
gstreamer-sys = { git = "https://github.com/sdroege/gstreamer-sys.git" }
gstreamer-base-sys = { git = "https://github.com/sdroege/gstreamer-sys.git" }
gstreamer-audio-sys = { git = "https://github.com/sdroege/gstreamer-sys.git" }
gstreamer-pbutils-sys = { git = "https://github.com/sdroege/gstreamer-sys.git" }
gstreamer-tag-sys = { git = "https://github.com/sdroege/gstreamer-sys.git" }
gstreamer-video-sys = { git = "https://github.com/sdroege/gstreamer-sys.git" }
gstreamer-app-sys = { git = "https://github.com/sdroege/gstreamer-sys.git" }
